<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@drawable/background_gradient">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="199dp"
        android:layout_height="162dp"
        android:layout_above="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginBottom="6dp"
        android:src="@mipmap/default_profile" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_marginBottom="5dp"
        android:hint="@string/name"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_register"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/selectText"
        android:hint="@string/password_register"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:password="true" />

    <TextView
        android:id="@+id/selectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/schoolList"
        android:layout_marginBottom="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/schoolSpinnerTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/schoolList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bio"
        android:layout_marginBottom="12dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/schools"
        android:prompt="@string/schoolSpinnerTitle"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_above="@+id/register"
        android:layout_marginBottom="17dp"
        android:hint="@string/bio" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="77dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/register_button_name"
        android:textColor="#1488E4" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/back"
        android:textColor="#1488E4" />
</RelativeLayout>