<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOrRegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:layout_gravity="center">

    <TextView
        android:layout_width="220dp"
        android:layout_height="78dp"
        android:layout_above="@+id/appImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="#F8F0EB"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/appImage"
        android:layout_width="224dp"
        android:layout_height="176dp"
        android:layout_above="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="67dp"
        android:src="@mipmap/tea" />

    <Button
        android:id="@+id/login"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_above="@+id/register"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="138dp"
        android:layout_marginBottom="32dp"
        android:text="@string/login_button_name"
        android:backgroundTint="#FFFFFF"
        android:textColor="#1488E4"
        android:textSize="18sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="136dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginEnd="143dp"
        android:layout_marginRight="138dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/register_button_name"
        android:textColor="#1488E4"
        android:textSize="18sp" />

</RelativeLayout>